--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -57,11 +57,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="118" id="T6X-ZO-2vk" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="118"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="T6X-ZO-2vk" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="T6X-ZO-2vk" id="s3Q-IP-poD">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="118"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z7z-Ix-fzr">
@@ -71,32 +71,60 @@
                                                 <constraint firstAttribute="width" constant="65" id="bpW-iQ-QVq"/>
                                             </constraints>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JeF-dG-dLb">
+                                            <rect key="frame" x="93" y="34.5" width="301" height="54.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cKT-tC-yLF">
                                             <rect key="frame" x="93" y="11" width="73" height="19.5"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JeF-dG-dLb">
-                                            <rect key="frame" x="93" y="34.5" width="301" height="72.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hVG-yF-ieM" userLabel="favButton">
+                                            <rect key="frame" x="354" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="hk6-iM-3IS"/>
+                                                <constraint firstAttribute="width" constant="30" id="zCN-JB-8LD"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon-1"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="T6X-ZO-2vk" eventType="touchUpInside" id="2po-UY-3vz"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x3D-PF-FuN" userLabel="retweetButton">
+                                            <rect key="frame" x="314" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="CfV-Bg-LyC"/>
+                                                <constraint firstAttribute="height" constant="30" id="Hsm-eT-xjn"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="T6X-ZO-2vk" eventType="touchUpInside" id="A7e-6Z-zQg"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="JeF-dG-dLb" firstAttribute="top" secondItem="cKT-tC-yLF" secondAttribute="bottom" constant="4" id="2Ie-Ic-vQQ"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="x3D-PF-FuN" secondAttribute="bottom" constant="10" id="6G4-km-rm0"/>
                                         <constraint firstItem="z7z-Ix-fzr" firstAttribute="leading" secondItem="s3Q-IP-poD" secondAttribute="leadingMargin" id="ANY-b2-4X5"/>
                                         <constraint firstItem="cKT-tC-yLF" firstAttribute="top" secondItem="s3Q-IP-poD" secondAttribute="topMargin" id="B7h-50-IH2"/>
                                         <constraint firstItem="z7z-Ix-fzr" firstAttribute="top" secondItem="s3Q-IP-poD" secondAttribute="topMargin" id="GwI-br-e0q"/>
                                         <constraint firstItem="JeF-dG-dLb" firstAttribute="trailing" secondItem="s3Q-IP-poD" secondAttribute="trailingMargin" id="KU9-9A-98f"/>
-                                        <constraint firstItem="JeF-dG-dLb" firstAttribute="bottom" secondItem="s3Q-IP-poD" secondAttribute="bottomMargin" id="LsZ-yh-szE"/>
                                         <constraint firstItem="cKT-tC-yLF" firstAttribute="leading" secondItem="z7z-Ix-fzr" secondAttribute="trailing" constant="8" id="bFc-Sp-Bsa"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="hVG-yF-ieM" secondAttribute="trailing" constant="10" id="fbJ-Gg-JGm"/>
                                         <constraint firstItem="JeF-dG-dLb" firstAttribute="leading" secondItem="z7z-Ix-fzr" secondAttribute="trailing" constant="8" id="hWg-2g-iKO"/>
+                                        <constraint firstItem="hVG-yF-ieM" firstAttribute="leading" secondItem="x3D-PF-FuN" secondAttribute="trailing" constant="10" id="i88-zf-wMf"/>
+                                        <constraint firstItem="hVG-yF-ieM" firstAttribute="top" secondItem="JeF-dG-dLb" secondAttribute="bottom" constant="10" id="s78-1g-CZJ"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="hVG-yF-ieM" secondAttribute="bottom" constant="10" id="w79-gs-qnu"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="hVG-yF-ieM" id="72W-wi-55O"/>
                                     <outlet property="profileImageView" destination="z7z-Ix-fzr" id="ruT-8G-Qz2"/>
+                                    <outlet property="retweetButton" destination="x3D-PF-FuN" id="h8P-4M-7LY"/>
                                     <outlet property="tweetContent" destination="JeF-dG-dLb" id="Rqh-E4-1gi"/>
                                     <outlet property="userNameLabel" destination="cKT-tC-yLF" id="FoB-7V-OQr"/>
                                 </connections>
@@ -114,11 +142,66 @@
                                 <action selector="onLogout:" destination="SrI-1b-IFT" id="Fnh-6s-WWV"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" style="plain" id="lxs-gA-dIu">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="fiF-Vb-iAh" kind="presentation" id="j5p-wA-94o"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MgH-6f-Bkv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2034.7826086956522" y="68.973214285714278"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="8iT-mf-41G">
+            <objects>
+                <viewController id="QJt-qW-D0G" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xTb-Hw-gg3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="O0y-LJ-3f1">
+                                <rect key="frame" x="0.0" y="88" width="414" height="164"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="SrU-XH-vVA"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="eX4-iW-P0t"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="eX4-iW-P0t" firstAttribute="trailing" secondItem="O0y-LJ-3f1" secondAttribute="trailing" id="FXT-dd-Egu"/>
+                            <constraint firstItem="O0y-LJ-3f1" firstAttribute="leading" secondItem="eX4-iW-P0t" secondAttribute="leading" id="KEB-OG-7Ye"/>
+                            <constraint firstItem="O0y-LJ-3f1" firstAttribute="top" secondItem="eX4-iW-P0t" secondAttribute="top" id="aPi-nw-skh"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="wwc-Ow-aHf">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="uqh-a8-iIM">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cancel:" destination="QJt-qW-D0G" id="BUf-Gy-OGF"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="K3S-0J-0Fu">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="QJt-qW-D0G" id="ayo-mx-hoK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="O0y-LJ-3f1" id="NZL-Gr-raO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BJn-Yr-wZA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3867" y="69"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="VRG-pT-M3X">
@@ -140,8 +223,32 @@
             </objects>
             <point key="canvasLocation" x="1114" y="69"/>
         </scene>
+        <!--Tweet Navigation Controller Scene-->
+        <scene sceneID="SqY-vx-R8I">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="fiF-Vb-iAh" userLabel="Tweet Navigation Controller Scene" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ykr-PZ-ums">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.1129205152" green="0.62888962029999995" blue="0.94889456029999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="QJt-qW-D0G" kind="relationship" relationship="rootViewController" id="35u-iw-i42"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xEK-ia-b74" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2958" y="69"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon-1" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
